--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     //implementation 'com.google.firebase:firebase-database:18.0.2'
     //CUIDADO CON EL FIREBASE DE GOOGLE NO ESTA LA VERSION CORRECTA!!!!
     implementation 'com.google.firebase:firebase-core:18.0.2'
-    implementation "com.google.android.material:material:1.4.0-alpha01"
-    implementation "androidx.recyclerview:recyclerview:1.2.0-beta02"
+    implementation "com.google.android.material:material:1.4.0-alpha02"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.gridlayout:gridlayout:1.0.0"
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
